# zealmcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/zealmcp/: cli.py  config.py  docsets.py  html_text.py  server.py
tests/: test_docsets.py  test_html_text.py
