[project]
name = "zealmcp"
version = "0.1.0"
description = "MCP server exposing Zeal docsets for agent grounding"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "mcp>=1.6.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zealmcp"]

[project.scripts]
zeal-mcp = "zealmcp.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
